fix: fix html has scrollbar on overflow

--- a/src/globals.css
+++ b/src/globals.css
@@ -75,6 +75,10 @@
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 /* Scroll-bar style */
 
 *::-webkit-scrollbar {
